# zeiss_task

./: CMakeLists.txt
include/: gpu_integral_image.h  integral_image.h  integral_image_constants.h  integral_image_input_examples.h  parallel_integral_image.h  sequential_integral_image.h
src/: gpu_integral_image.cpp  integral_image.cpp  integral_image_input_examples.cpp  parallel_integral_image.cpp  sequential_integral_image.cpp
tests/: tests.cpp  timer.cpp
